--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -21,56 +21,20 @@
         android:layout_marginBottom="16dp"
         android:max="100"
         android:progress="10" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/buttonRed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_red_dark"
-            android:padding="15dp"
-            android:text="Red" />
-
-        <Button
-            android:id="@+id/buttonGreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:padding="15dp"
-            android:text="Green" />
-
-        <Button
-            android:id="@+id/buttonBlue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_blue_dark"
-            android:padding="15dp"
-            android:text="Blue" />
-
-    </LinearLayout>
-
     <View
         android:id="@+id/colorPalette"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="16dp"
         android:background="@android:color/black"
-        android:elevation="2dp" />
+        android:elevation="2dp"
+        android:clickable="true" />
 
     <TextView
         android:id="@+id/colorPaletteLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Current Color"
+        android:text="Current Color (Tap to Change)"
         android:textSize="16sp" />
-
 
 </LinearLayout>
