Navigation from drawing to list fragments

--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -124,5 +124,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewDrawingsButton"
+        android:text="View Drawings">
+    </Button>
+
 
 </LinearLayout>
