--- a/app/src/main/res/layout/fragment_cloud_drawings.xml
+++ b/app/src/main/res/layout/fragment_cloud_drawings.xml
@@ -5,9 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".CloudDrawingsFragment">
 
+    <Button
+        android:id="@+id/viewDrawingsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:layout_marginBottom="24dp" />
+
     <androidx.compose.ui.platform.ComposeView
     android:id="@+id/composeView2"
+    android:layout_marginTop="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     />
 </FrameLayout>
